--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+dj-database-url==0.5.0
 Django==2.1.7
 django-crispy-forms==1.11.1
 django-environ==0.4.5
+django-heroku==0.3.1
+psycopg2==2.8.6
 pytz==2021.1
+whitenoise==5.2.0
