--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==2.1.7
 django-crispy-forms==1.11.1
 django-environ==0.4.5
 django-heroku==0.3.1
+gunicorn==20.0.4
 psycopg2==2.8.6
 pytz==2021.1
 whitenoise==5.2.0
